// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should support render with multiple mode 1`] = `
<div class="container">
  <div class="fect-select fect-select--medium" style="--select-content-height: 0px;" data-size="medium">
    <div class="fect-tooltip">
      <div class="fect-select__content">
        <div class="fect-grid__group fect-grid__group--wrap fect-select__multiple" style="align-content: flex-start; align-items: stretch; flex-direction: row; justify-content: flex-start; --fect-grid-gap: calc(0.5 * 16px * 1/3);"></div>
        <div class="fect-input fect-input--medium">
          <!---->
          <div class="fect-input__container">
            <!---->
            <div class="fect-input__wrapper">
              <!----><input type="text" class="fect-select__input" readonly="" placeholder="mock placeholder test" role="combobox" aria-haspopup="listbox" aria-expanded="false">
              <!---->
              <div class="fect-input__icon fect-input__icon--suffix" style="cursor: pointer; pointer-events: auto;">
                <div class="fect-select__arrow"><svg viewBox="0 0 24 24" height="20" width="20" stroke-width="1" stroke-linecap="round" color="currentColor" stroke="currentColor" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision">
                    <path d="M6 9l6 6 6-6"></path>
                  </svg></div>
              </div>
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
</div>
`;

exports[`Select should wrork correctly 1`] = `
<div class="container">
  <div class="fect-select fect-select--mini" style="--select-content-height: calc(var(--select-ratio) * var(--fect-gap));" data-size="mini">
    <div class="fect-tooltip">
      <div class="fect-select__content">
        <!---->
        <div class="fect-input fect-input--mini">
          <!---->
          <div class="fect-input__container">
            <!---->
            <div class="fect-input__wrapper">
              <!----><input type="text" class="fect-select__input" readonly="" placeholder="mock placeholder test" role="combobox" aria-haspopup="listbox" aria-expanded="false">
              <!---->
              <div class="fect-input__icon fect-input__icon--suffix" style="cursor: pointer; pointer-events: auto;">
                <div class="fect-select__arrow"><svg viewBox="0 0 24 24" height="20" width="20" stroke-width="1" stroke-linecap="round" color="currentColor" stroke="currentColor" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision">
                    <path d="M6 9l6 6 6-6"></path>
                  </svg></div>
              </div>
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
</div>
`;
